syntax = "proto3";

package calculator;

option go_package = "./pb";

service CalculationService {
  rpc Run(RunCalculationRequest) returns (RunCalculationResponse) {}
}

message RunCalculationRequest {
  string equation = 1;
}

message RunCalculationResponse {
  double result = 1;
}

message Error {
	string code = 1;
	string message = 2;
}
